--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: bmi_calculator
-description: A new Flutter application.
+description: A simple BMI calculator.
 
 version: 1.0.0+1
 
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  font_awesome_flutter: ^8.4.0
 
 dev_dependencies:
   flutter_test:
